# drift

./: .driftignore  .gitignore  ARCHITECTURE-AUDIT.md  CHANGELOG.md  DETECTOR-AUDIT.md  LICENSE  LICENSING.md  PATTERN-LOCATION-DISCOVERY.md  PATTERN-SUMMARY.md  README.md  TELEMETRY.md  WIRING-PLAN.md  analyze-repo.ts  analyze-self.ts  detect-patterns.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-export.json  tsconfig.base.json  tsconfig.json  vitest.config.ts.timestamp-1768855233542-10c41dcd53d8e.mjs  vitest.workspace.ts
crates/cortex/: Cargo.toml
crates/cortex-drift-bridge/: BRIDGE-CORRELATION-HARDENING-TASKS.md  Cargo.toml
crates/cortex-drift-bridge/.drift/: drift.db-shm  drift.db-wal
crates/cortex-drift-bridge/src/: errors.rs  lib.rs  traits.rs
crates/cortex-drift-bridge/src/.drift/: drift.db-shm  drift.db-wal
crates/cortex-drift-bridge/src/causal/: counterfactual.rs  edge_builder.rs  intervention.rs  pruning.rs
crates/cortex-drift-bridge/src/config/: bridge_config.rs
crates/cortex-drift-bridge/src/errors/: bridge_error.rs  recovery.rs
crates/cortex-drift-bridge/src/event_mapping/: dedup.rs  mapper.rs  memory_builder.rs  memory_types.rs  mod.rs
crates/cortex-drift-bridge/src/grounding/: classification.rs  contradiction.rs  evidence.rs  loop_runner.rs  mod.rs  scheduler.rs  scorer.rs
crates/cortex-drift-bridge/src/health/: checks.rs
crates/cortex-drift-bridge/src/intents/: extensions.rs  mod.rs  resolver.rs
crates/cortex-drift-bridge/src/license/: gating.rs  mod.rs  usage_tracking.rs
crates/cortex-drift-bridge/src/link_translation/: mod.rs  translator.rs
crates/cortex-drift-bridge/src/napi/: functions.rs  mod.rs
crates/cortex-drift-bridge/src/query/: cortex_queries.rs  cross_db.rs  drift_queries.rs
crates/cortex-drift-bridge/src/specification/: attribution.rs  corrections.rs  decomposition_provider.rs  events.rs  mod.rs  narrative.rs  weight_provider.rs
crates/cortex-drift-bridge/src/storage/: engine.rs  migrations.rs  mod.rs  pool.rs  pragmas.rs  schema.rs  tables.rs
crates/cortex-drift-bridge/src/tools/: drift_grounding_check.rs  drift_health.rs  drift_memory_learn.rs  drift_why.rs  mod.rs
crates/cortex-drift-bridge/src/types/: grounding_result.rs  grounding_snapshot.rs  mod.rs
crates/cortex-drift-bridge/tests/: buildout_e2e_test.rs  code_quality_hardening_test.rs  correlation_hardening_test.rs  enterprise_critical_infra_test.rs  enterprise_data_integrity_test.rs  enterprise_final_gaps_test.rs  enterprise_hardening_test.rs  event_mapping_test.rs  grounding_hardening_test.rs  grounding_test.rs  hardening_test.rs  infra_hardening_test.rs  link_translation_test.rs  phase9_bridge_gap_test.rs  production_cat17_bridge_test.rs  production_cat23_t06_test.rs  production_cat24_test.rs  production_cat27_test.rs  production_cat4_test.rs  spec_bridge_test.rs  spec_causal_hardening_test.rs  spec_integration_test.rs  stress_test.rs
crates/cortex-drift-bridge/tests/integration/: cloud_swap_test.rs  mod.rs
crates/cortex/cortex-causal/tests/: coverage_test.rs
crates/cortex/cortex-cloud/tests/: coverage_test.rs
crates/cortex/cortex-consolidation/benches/: consolidation_bench.rs
crates/cortex/cortex-consolidation/tests/: golden_test.rs
crates/cortex/cortex-core/tests/: config_e2e_test.rs  coverage_test.rs
crates/cortex/cortex-decay/benches/: decay_bench.rs
crates/cortex/cortex-embeddings/tests/: coverage_test.rs  embedding_wiring_test.rs
crates/cortex/cortex-multiagent/tests/: audit_phase_a_test.rs  coverage_test.rs  enterprise_stress_test.rs  golden_test.rs  production_cat19_test.rs  rbac_hardening_test.rs  stress_test.rs  swarm_simulation_test.rs  sync_test.rs  trust_test.rs
crates/cortex/cortex-retrieval/benches/: retrieval_bench.rs
crates/cortex/cortex-retrieval/tests/: stress_test.rs
crates/cortex/cortex-session/tests/: production_cat19_test.rs
crates/cortex/cortex-storage/benches/: storage_bench.rs
crates/cortex/cortex-storage/src/: lib.rs  temporal_events.rs
crates/cortex/cortex-storage/tests/: engine_wiring_test.rs  production_cat10_session_test.rs  production_cat11_multiagent_test.rs  production_cat12_cloud_test.rs  production_cat13_versioning_test.rs  production_cat14_observability_test.rs  production_cat15_maintenance_test.rs  production_cat16_napi_storage_test.rs  production_cat18_edge_cases_test.rs  production_cat1_schema_test.rs  production_cat25_test.rs  production_cat2_pool_test.rs  production_cat3_crud_test.rs  production_cat4_temporal_test.rs  production_cat5_query_test.rs  production_cat6_fts5_test.rs  production_cat7_vector_test.rs  production_cat8_causal_test.rs  production_cat9_links_test.rs
crates/cortex/cortex-temporal/: Cargo.toml
crates/cortex/cortex-temporal/benches/: temporal_bench.rs
crates/cortex/cortex-temporal/src/: engine.rs  lib.rs
crates/cortex/cortex-temporal/tests/: drift_test.rs  property_tests.rs  query_test.rs  stress_test.rs  temporal_test.rs
crates/cortex/test-fixtures/tests/: degradation_test.rs  full_lifecycle_test.rs  production_cat19_test.rs
crates/drift/: Cargo.toml
crates/drift/drift-analysis/: Cargo.toml
crates/drift/drift-analysis/benches/: call_graph_bench.rs  confidence_bench.rs  framework_bench.rs
crates/drift/drift-analysis/src/: lib.rs
crates/drift/drift-analysis/tests/: aggregation_test.rs  audit_test.rs  boundaries_test.rs  call_graph_hardening_test.rs  call_graph_test.rs  confidence_test.rs  coupling_test.rs  coverage_boost_test.rs  coverage_deep_test.rs  coverage_engine_test.rs  critical_infra_stress_test.rs  detector_parity_test.rs  detectors_test.rs  determinism_test.rs  e2e_full_pipeline_test.rs  e2e_gap_coverage_test.rs  enforcement_integration_test.rs  engine_test.rs  error_handling_test.rs  frameworks_test.rs  graph_integration_test.rs  impact_test.rs  integration_test.rs  language_provider_test.rs  (+22 more)
crates/drift/drift-core/: Cargo.toml
crates/drift/drift-napi/: Cargo.toml
crates/drift/drift-storage/: Cargo.toml
demo/rust-backend/: Cargo.toml
demo/rust-backend/src/: errors.rs  main.rs  models.rs
(+546 files in other folders)
