[package]
name = "cortex-drift-bridge"
version = "0.1.0"
edition = "2021"
description = "Integration bridge between Cortex memory and Drift analysis — event mapping, grounding loop, link translation"

[dependencies]
# Both systems — this is the ONLY crate that imports both
cortex-core = { path = "../cortex/cortex-core" }
cortex-causal = { path = "../cortex/cortex-causal" }
drift-core = { path = "../drift/drift-core" }

# Storage (for cross-DB ATTACH queries and bridge tables)
rusqlite = { version = "0.32", features = ["bundled", "vtab", "backup", "blob"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Observability
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing for content comparison
blake3 = "1"

# UUID generation for grounding result IDs
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
