[workspace]
resolver = "2"
members = [
    "cortex-core",
    "cortex-tokens",
    "cortex-storage",
    "cortex-embeddings",
    "cortex-privacy",
    "cortex-compression",
    "cortex-decay",
    "cortex-causal",
    "cortex-retrieval",
    "cortex-validation",
    "cortex-learning",
    "cortex-consolidation",
    "cortex-prediction",
    "cortex-session",
    "cortex-reclassification",
    "cortex-observability",
    "cortex-cloud",
    "cortex-temporal",
    "cortex-napi",
    "test-fixtures",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/drift/cortex"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Hashing
blake3 = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Parallelism
rayon = "1"

# Caching
moka = { version = "0.12", features = ["sync"] }

# Concurrency
dashmap = "6"

# SQLite
rusqlite = { version = "0.32", features = ["bundled", "vtab", "backup", "blob"] }

# Graph
petgraph = "0.6"

# Clustering
hdbscan = "0.4"

# Token counting
tiktoken-rs = "0.6"

# Embedding inference
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "blocking"] }

# Regex
regex = "1"

# Tracing / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# NAPI
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
cortex-core = { path = "cortex-core" }
cortex-tokens = { path = "cortex-tokens" }
cortex-storage = { path = "cortex-storage" }
cortex-embeddings = { path = "cortex-embeddings" }
cortex-privacy = { path = "cortex-privacy" }
cortex-compression = { path = "cortex-compression" }
cortex-decay = { path = "cortex-decay" }
cortex-causal = { path = "cortex-causal" }
cortex-retrieval = { path = "cortex-retrieval" }
cortex-validation = { path = "cortex-validation" }
cortex-learning = { path = "cortex-learning" }
cortex-consolidation = { path = "cortex-consolidation" }
cortex-prediction = { path = "cortex-prediction" }
cortex-session = { path = "cortex-session" }
cortex-reclassification = { path = "cortex-reclassification" }
cortex-observability = { path = "cortex-observability" }
cortex-cloud = { path = "cortex-cloud" }
cortex-temporal = { path = "cortex-temporal" }
cortex-napi = { path = "cortex-napi" }
test-fixtures = { path = "test-fixtures" }

# Compression
zstd = "0.13"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[profile.dev]
incremental = true
debug = 2
opt-level = 0
