[workspace]
resolver = "2"
members = [
    "drift-core",
    "drift-analysis",
    "drift-storage",
    "drift-context",
    "drift-napi",
    "drift-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/drift/drift"

[workspace.dependencies]
# Parsing
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-kotlin-sg = "0.4"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling & observability
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Performance data structures
aho-corasick = "1"
rustc-hash = "2"
smallvec = { version = "1", features = ["serde"] }
lasso = { version = "0.7", features = ["multi-threaded", "serialize"] }
rayon = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Graph
petgraph = "0.8"

# Caching
moka = { version = "0.12", features = ["sync"] }

# File system
ignore = "0.4"

# Concurrency
crossbeam-channel = "0.5"

# NAPI
napi = { version = "3", features = ["async", "serde-json"] }
napi-derive = "3"
napi-build = "2"

# Additional shared deps
statrs = "0.18"
git2 = "0.20"
tiktoken-rs = "0.9"
fd-lock = "4"
quick-xml = "0.37"
serde_yaml = "0.9"
glob = "0.3"
base64 = "0.22"
schemars = "0.8"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

# Internal crates
drift-core = { path = "drift-core" }
drift-analysis = { path = "drift-analysis" }
drift-storage = { path = "drift-storage" }
drift-context = { path = "drift-context" }
drift-napi = { path = "drift-napi" }
drift-bench = { path = "drift-bench" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"

[profile.dev]
incremental = true
debug = 2
opt-level = 0
