[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
diesel = { version = "2", features = ["postgres"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
