[package]
name = "cortex-temporal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Temporal reasoning, event sourcing, knowledge time-travel, and drift detection"

[dependencies]
cortex-core = { workspace = true }
cortex-storage = { workspace = true }
cortex-causal = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
test-fixtures = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
uuid = { workspace = true }
tempfile = "3"

[[bench]]
name = "temporal_bench"
harness = false
