[package]
name = "drift-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Analysis engine: scanner, parsers, detectors, call graph, boundaries, patterns, and enforcement"

[dependencies]
drift-core = { workspace = true }
aho-corasick = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
xxhash-rust = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-kotlin-sg = { workspace = true }
moka = { workspace = true }
lasso = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
petgraph = { workspace = true }
regex = "1"
thiserror = { workspace = true }
rusqlite = { workspace = true }
statrs = { workspace = true }
serde_yaml = { workspace = true }
quick-xml = { workspace = true }
glob = { workspace = true }
base64 = { workspace = true }
schemars = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }
drift-storage = { workspace = true }
drift-context = { workspace = true }
rusqlite = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "scanner_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "call_graph_bench"
harness = false

[[bench]]
name = "confidence_bench"
harness = false

[[bench]]
name = "framework_bench"
harness = false
