[package]
name = "drift-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types, traits, errors, config, events, tracing, and constants for the Drift analysis engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
lasso = { workspace = true }
rusqlite = { workspace = true, features = ["bundled", "backup"] }
fd-lock = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
rayon = { workspace = true }
tempfile = "3"
