[package]
name = "drift-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQLite persistence layer: connections, batch writer, migrations, queries, pagination"

[dependencies]
drift-core = { workspace = true }
rusqlite = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "engine_benchmark"
harness = false
